add simple structure project

--- a/index.html
+++ b/index.html
@@ -5,8 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zadanie IAI</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- Header Marcin -->
+    <div id="header" class="container">
+        <div class="row">
+            <div class="col-4">test</div>
+            <div class="col-4">tes1t</div>
+            <div class="col-4">tes1t</div>
+        </div>
+    </div>
+
+    <!-- nawigacja Karolina -->
+    <div id="nav" class="container">
+        <div class="row">
+            <div class="col-12">nawigacja</div>
+        </div>
+    </div>
+
+    <!-- slider Piotr -->
+    <div id="slider" class="container-fluid">
+        <div class="row row-no-gutters">
+            <div class="container">
+                <div class="col-12">slider</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Polecane Adrian -->
+    <div id="recommend" class="container">
+        <div class="row">
+            <div class="col-12">polecane</div>
+        </div>
+    </div>
+
+    <!--Produkt Karolina -->
+    <div id="product" class="container">
+        <div class="row">
+            <div class="col-12">Produkt</div>
+        </div>
+    </div>
+
+    <!-- Firmy Marta -->
+    <div id="company" class="container">
+        <div class="row">
+            <div class="col-12">firmy</div>
+        </div>
+    </div>
+
+    <!-- O-nas Marta(Piotr) -->
+    <div id="about" class="container">
+        <div class="row">
+            <div class="col-12">O nas</div>
+        </div>
+    </div>
+
+    <!-- Newsletter Adrian (Marcin) -->
+    <div id="newsletter" class="container">
+        <div class="row">
+            <div class="col-12">Newsletter</div>
+        </div>
+    </div>
+
+    <!-- Footer Marcin -->
+    <div id="footer" class="container-fluid">
+        <div class="row row-no-gutters">
+            <div class="container">
+                <div class="col-12">Stopka</div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+    <script src="js/functions.js"></script>
 </body>
 </html>
