--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Zadanie IAI</title>
     <link rel="stylesheet" href="css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
