--- a/index.html
+++ b/index.html
@@ -546,9 +546,10 @@
     </div>
 
     <!-- Newsletter Adrian (Marcin) -->
-    <div id="newsletter" class="container">
+   <!-- Newsletter Adrian (Marcin) -->
+   <div id="newsletter" class="container-fluid">
         <div class="row">
-            <div class="col-12">Newsletter</div>
+            <div class="col-12">
                 <form class="container">
                     <div class="newsletter_label">
                         <span>Newsletter</span>
@@ -566,7 +567,7 @@
                         <button>ZAPISZ SIĘ</button>
                     </div>
                 </form>
-
+            </div>
         </div>
     </div>
 
@@ -623,6 +624,14 @@
             </div>
         </div>
         <div class="row row-no-gutters">
+            <div class="container footer-bottom">
+                <div class="col-10">
+                    <p>Wszelkie prawa zastrzeone <strong>trangoworld</strong></p>
+                    </div>
+                    <div class="col-2">
+                        <img src="img/iai_logo.png" alt="">
+                    </div>
+            </div>
         </div>
     </div>
 
